[package]
name = "fsidx-cli"
version = "0.1.0"
edition = "2021"
authors = ["joachim.erbs@gmx.de"]
license = "MIT"
description = "Finding file names quickly with a database."
categories = ["command-line-utilities", "filesystem"]
keywords = ["locate"]

[[bin]]
name = "fsidx"
path = "src/bin.rs"

[dependencies]
clap = "4.3.11"
fsidx = {version = "0.1.0", path = "../fsidx" }
globset = "0.4.11"
indoc = "2.0.2"
libc = "0.2.117"
nix = "0.23.1"
nom = "7.1.3"
rustyline = "9.1.2"
serde = { version = "1.0.133", features = ["derive"] }
signal-hook = "0.3.13"
termcolor = "1.1.2"
toml = "0.7.6"
