[package]
name = "fsidx-cli"
version = "0.1.0"
edition = "2021"
authors = ["joachim.erbs@gmx.de"]
license = "MIT"
description = "Finding file names quickly with a database."
categories = ["command-line-utilities", "filesystem"]
keywords = ["locate"]

[dependencies]
clap = "4.3.11"
fsidx = {version = "0.1.0", path = "../fsidx" }
globset = { workspace = true }
indoc = "2.0.2"
libc = "0.2.117"
nix = { workspace = true }
nom = "7.1.3"
rustyline = { version = "15.0.0", features = ["derive"] }
serde = { workspace = true }
signal-hook = "0.3.13"
termcolor = "1.1.2"
toml = "0.8.19"
