[package]
name = "fsidx"
version = "0.1.0"
edition = "2021"
authors = ["joachim.erbs@gmx.de"]
license = "MIT"
description = "Finding file names quickly with a database."
categories = ["command-line-utilities", "filesystem"]
keywords = ["locate"]

[dependencies]
fastvlq = "1.1.1"
glob = "0.3.1"
natord = "1.0.9"
nix = "0.26.2"
num_cpus = "1.13.1"
num_enum = "0.6.1"
threadpool = "1.8.1"
walkdir = "2.3.1"
