[package]
name = "fsidx"
version = "0.1.0"
edition = "2021"
authors = ["joachim.erbs@gmx.de"]
license = "MIT"
description = "Finding file names quickly with a database."
categories = ["command-line-utilities", "filesystem"]
keywords = ["locate"]

[dependencies]
fastvlq = "1.1.1"
globset = "0.4.10"
natord = "1.0.9"
nix = { workspace = true }
num_cpus = "1.13.1"
num_enum = "0.7.3"
serde = { version = "1.0.133", features = ["derive"] }
threadpool = "1.8.1"
walkdir = "2.3.1"
